tests/dataset/tpc-ds/compiler/c/q42.error
/tmp/q42.c: In function ‘test_TPCDS_Q42_simplified’:
/tmp/q42.c:256:20: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  256 |                    (tmp_item_t){.d_year = 2020,
      |                    ^
/tmp/q42.c:262:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  262 |   if (test_TPCDS_Q42_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/q42.c:266:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  266 |       if (test_TPCDS_Q42_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/q42.c: In function ‘main’:
/tmp/q42.c:298:7: warning: implicit declaration of function ‘records_item_list_t_create’ [-Wimplicit-function-declaration]
  298 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q42.c:298:42: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  298 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |                                          ^
      |                                          ->
/tmp/q42.c:298:60: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  298 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |                                                            ^
      |                                                            ->
/tmp/q42.c:298:71: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  298 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |                                                                       ^
      |                                                                       ->
/tmp/q42.c:326:30: warning: implicit declaration of function ‘grouped_item_list_t_create’ [-Wimplicit-function-declaration]
  326 |   grouped_item_list_t tmp9 = grouped_item_list_t_create(grouped.len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q42.c:326:30: error: invalid initializer
/tmp/q42.c:374:38: error: incompatible types when assigning to type ‘list_int’ from type ‘grouped_item_list_t’
  374 |   test_TPCDS_Q42_simplified_result = result;
      |                                      ^~~~~~
