tests/dataset/tpc-ds/compiler/c/q42.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int month = 5;
static int year = 2020;

typedef struct {
  int d_year;
  int i_category_id;
  const char *i_category;
  double sum_ss_ext_sales_price;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  int i_category_id;
  const char *i_category;
  double sum_ss_ext_sales_price;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int sold_date_sk;
  int item_sk;
  double ext_sales_price;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  int i_manager_id;
  int i_category_id;
  const char *i_category;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  int i_category_id;
  const char *i_category;
  double price;
} records_item_t;
typedef struct {
  int len;
  records_item_t *data;
} records_item_list_t;
records_item_list_t create_records_item_list(int len) {
  records_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(records_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  int i_category_id;
  int i_category;
  double sum_ss_ext_sales_price;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q42_simplified_result;
static void test_TPCDS_Q42_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.d_year = 2020,
                            .i_category_id = 200,
                            .i_category = "CatB",
                            .sum_ss_ext_sales_price = 20.0},
                   (tmp_item_t){.d_year = 2020,
                                .i_category_id = 100,
                                .i_category = "CatA",
                                .sum_ss_ext_sales_price = 10.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q42_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q42_simplified_result.len; i3++) {
      if (test_TPCDS_Q42_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {
      (store_sale_t){.sold_date_sk = 1, .item_sk = 1, .ext_sales_price = 10.0},
      (store_sale_t){.sold_date_sk = 1, .item_sk = 2, .ext_sales_price = 20.0},
      (store_sale_t){.sold_date_sk = 2, .item_sk = 1, .ext_sales_price = 15.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  item_t item[] = {(item_t){.i_item_sk = 1,
                            .i_manager_id = 1,
                            .i_category_id = 100,
                            .i_category = "CatA"},
                   (item_t){.i_item_sk = 2,
                            .i_manager_id = 1,
                            .i_category_id = 200,
                            .i_category = "CatB"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2020, .d_moy = 5},
      (date_dim_t){.d_date_sk = 2, .d_year = 2021, .d_moy = 5}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  records_item_list_t tmp4 =
      records_item_list_t_create(date_dim.len * store_sales.len * item.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < date_dim_len; tmp6++) {
    date_dim_t dt = date_dim[tmp6];
    for (int tmp7 = 0; tmp7 < store_sales_len; tmp7++) {
      store_sale_t ss = store_sales[tmp7];
      if (!(ss.sold_date_sk == dt.d_date_sk)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < item_len; tmp8++) {
        item_t it = item[tmp8];
        if (!(ss.item_sk == it.i_item_sk)) {
          continue;
        }
        if (!(it.i_manager_id == 1 && dt.d_moy == month && dt.d_year == year)) {
          continue;
        }
        tmp4.data[tmp5] = (records_item_t){.d_year = dt.d_year,
                                           .i_category_id = it.i_category_id,
                                           .i_category = it.i_category,
                                           .price = ss.ext_sales_price};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  records_item_list_t records = tmp4;
  grouped_item_list_t grouped = (grouped_item_list_t){0, NULL};
  grouped_item_list_t tmp9 = grouped_item_list_t_create(grouped.len);
  double *tmp12 = (double *)malloc(sizeof(double) * grouped.len);
  int tmp10 = 0;
  for (int tmp11 = 0; tmp11 < grouped.len; tmp11++) {
    grouped_item_t g = grouped.data[tmp11];
    tmp9.data[tmp10] = g;
    tmp12[tmp10] = (-g.sum_ss_ext_sales_price);
    tmp10++;
  }
  tmp9.len = tmp10;
  for (int i15 = 0; i15 < tmp10 - 1; i15++) {
    for (int i16 = i15 + 1; i16 < tmp10; i16++) {
      if (tmp12[i15] > tmp12[i16]) {
        double tmp13 = tmp12[i15];
        tmp12[i15] = tmp12[i16];
        tmp12[i16] = tmp13;
        grouped_item_t tmp14 = tmp9.data[i15];
        tmp9.data[i15] = tmp9.data[i16];
        tmp9.data[i16] = tmp14;
      }
    }
  }
  grouped_item_list_t base = tmp9;
  grouped_item_list_t result = base;
  printf("[");
  for (int i17 = 0; i17 < result.len; i17++) {
    if (i17 > 0)
      printf(",");
    grouped_item_t it = result.data[i17];
    printf("{");
    _json_string("d_year");
    printf(":");
    _json_int(it.d_year);
    printf(",");
    _json_string("i_category_id");
    printf(":");
    _json_int(it.i_category_id);
    printf(",");
    _json_string("i_category");
    printf(":");
    _json_int(it.i_category);
    printf(",");
    _json_string("sum_ss_ext_sales_price");
    printf(":");
    _json_float(it.sum_ss_ext_sales_price);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q42_simplified_result = result;
  test_TPCDS_Q42_simplified();
  free(result.data);
  return 0;
}
